<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:id="@+id/textInputLayout">
        <EditText
            android:id="@+id/feed_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textUri"
            android:imeOptions="actionDone"
            android:hint="@string/rss_feed_hint"
            tools:text = "@string/lorem_ipsum"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/cancel"
        android:textSize="@dimen/title_text_size"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintRight_toLeftOf="@+id/save_button"
        app:layout_constraintHorizontal_bias="1.0"
        />

    <Button
        android:id="@+id/save_button"
        android:textSize="@dimen/title_text_size"
        android:text="@string/save_feed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:background="?attr/selectableItemBackground"
        />

    <TextView
        android:id="@+id/lenta_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_text_size"
        android:text="@string/lenta_url"
        android:textColor="@color/textColorPrimary"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_button"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:visibility="gone"
        tools:visibility="visible"
        />

    <TextView
        android:id="@+id/pcworld_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_text_size"
        android:text="@string/pcworld_url"
        android:textColor="@color/textColorPrimary"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lenta_url"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:visibility="gone"
        tools:visibility="visible"
        />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/pcworld_url"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:visibility="gone"
        tools:visibility="visible"
        />


</android.support.constraint.ConstraintLayout>